dd/mm/yy

16/07/18:
	Fixed Bugs:
		bot taps the wrong chat if it shifts up or down due to new messages in other group
			cause: the webview of chatgroup list item was cached which swapped when a listitem shifts up and down to different group during execution
			fix: find the webview everytime it is needed (removed cached webview for chatgroup listitem)
			
		CheckerThread crashes when a group without ";;" gets a message
			cause: group title name was split by ";;" and the 2nd item in the array is checked as the groupid, if the group doesnt have ";;" it would give IndexOutOfBoundExeption
			fix: check if the list after splitting have more than 2 elements, before using the 2nd item to search for groupid

29/4/18:
	Created Scheduler system
		Scheduler system enables the bot to schedule tasks at a perticular time and date.
		
		ScheduleTask
			Contians task to be exected at time.
		Schedule
			Object that contains task to be called and time to be scheduled,
		ScheduleManager
			Manages Schedules
			use Bot.getScheduleManager().add() to add Schedule to the Bot
	
	Created NetworkJob system
		NetworkJob allows the bot to call remote services.
		
		NetworkJob
			creates a Request strings that is sent to the service
			and handles the Response strings that comes from the service
		NetworkJobManager
			manages NetworkJob
			creates id for the job that is created, and sends the request to the service,
			waits for the service's response
	
	moved Math feature from the core project to example

25/4/18:
    Created RemoteActionCall
		RemoteActionCall enables the bot to recognize and create Action object from string,
		The limitation of which being that all the parameters of Action to be created should have parameters only of type
		String, Integer, Float, or Boolean, if its not it should have a static method: Object castFromString(String s);
		which the RemoteActionCall uses to convert a string query to parameters object.
		
	Created ActionCallerCC (Console Command)